<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white">

    <TextView style="@style/LargeText"
        android:layout_width="fill_parent"
        android:layout_height="80dip"
        android:text="@string/recipe"
        android:gravity="center_vertical"
        android:focusable="true"
        android:clickable="true"
        android:onClick="onRecipeClick"
        android:background="@android:drawable/list_selector_background"
        android:visibility="gone"/>

    <View android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/gray"
        android:visibility="gone"/>

    <TextView style="@style/LargeText"
        android:layout_width="fill_parent"
        android:layout_height="80dip"
        android:text="@string/pricing"
        android:gravity="center_vertical"
        android:focusable="true"
        android:clickable="true"
        android:background="@android:drawable/list_selector_background"
        android:onClick="onPricingClick"/>

    <View android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/gray"/>

    <TextView style="@style/LargeText"
        android:layout_width="fill_parent"
        android:layout_height="80dip"
        android:text="@string/recipe_history"
        android:gravity="center_vertical"
        android:focusable="true"
        android:clickable="true"
        android:onClick="onRecipeHistoryClicked"
        android:background="@android:drawable/list_selector_background"/>

    <View android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/gray"/>

    <TextView style="@style/LargeText"
        android:layout_width="fill_parent"
        android:layout_height="80dip"
        android:text="@string/medicine_manage"
        android:gravity="center_vertical"
        android:focusable="true"
        android:clickable="true"
        android:background="@android:drawable/list_selector_background"
        android:onClick="onMedicineManagerClick"/>

    <View android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/gray"/>
</LinearLayout>
