<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <EditText style="@style/MiddleText"
            android:id="@+id/recipe_name_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:hint="@string/recipe_name_hint"/>

        <View android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@android:drawable/divider_horizontal_textfield"/>

        <RelativeLayout android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dip">

            <TextView style="@style/MiddleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/recipe_count_edit"
                android:paddingRight="5dip"
                android:text="@string/recipe_count"
                android:gravity="center_vertical"
                android:layout_alignParentLeft="true"/>

            <EditText style="@style/MiddleText"
                android:id="@+id/recipe_count_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/recipe_count_unit_view"
                android:text="1"
                android:numeric="integer"/>

            <TextView style="@style/MiddleText"
                android:id="@+id/recipe_count_unit_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/recipe_count_edit"
                android:paddingRight="5dip"
                android:text="@string/recipe_unit"
                android:gravity="center_vertical"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <View android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@android:drawable/divider_horizontal_textfield"/>

        <RelativeLayout android:id="@+id/recipe_fee_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dip">

            <TextView android:id="@+id/register_fee_view"
                style="@style/MiddleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/recipe_register_fee_edit"
                android:paddingRight="5dip"
                android:text="@string/recipe_register_fee"
                android:gravity="center_vertical"
                android:layout_alignParentLeft="true"/>

            <EditText style="@style/MiddleText"
                android:id="@+id/recipe_register_fee_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/register_fee_view"
                android:text="0"
                android:numeric="decimal"/>

            <TextView style="@style/MiddleText"
                android:id="@+id/recipe_other_fee_unit_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dip"
                android:text="@string/recipe_fee_unit"
                android:gravity="center_vertical"
                android:layout_alignBaseline="@+id/recipe_other_fee_edit"
                android:layout_toRightOf="@+id/recipe_register_fee_edit"/>

            <TextView android:id="@+id/other_fee_view"
                style="@style/MiddleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/recipe_other_fee_edit"
                android:paddingRight="5dip"
                android:layout_toLeftOf="@+id/recipe_other_fee_edit"
                android:text="@string/recipe_other_fee"
                android:gravity="center_vertical"/>

            <EditText style="@style/MiddleText"
                android:id="@+id/recipe_other_fee_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:numeric="decimal"
                android:layout_toLeftOf="@+id/recipe_other_fee_unit_view"/>

            <TextView style="@style/MiddleText"
                android:id="@+id/recipe_other_fee_unit_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dip"
                android:text="@string/recipe_fee_unit"
                android:gravity="center_vertical"
                android:layout_alignBaseline="@+id/recipe_other_fee_edit"
                android:layout_alignParentRight="true"/>

            <View android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="@android:drawable/divider_horizontal_textfield"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>

        <LinearLayout android:id="@+id/add_recipe_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout android:layout_width="fill_parent"
                android:layout_height="?android:attr/listPreferredItemHeight"
                android:orientation="horizontal">

                <TextView style="@style/SmallText"
                    android:layout_width="0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dip"
                    android:singleLine="true"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:text="@string/recipe_recipping_medicine"/>

                <View android:layout_width="1dip"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="2dip"
                    android:layout_marginBottom="2dip"
                    android:background="@android:drawable/divider_horizontal_textfield"/>

                <ImageView android:id="@+id/patient_case_history_add"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dip"
                    android:src="@drawable/ic_input_add"
                    android:onClick="onAddRecipeClick"/>

            </LinearLayout>
        </LinearLayout>

        <View android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@android:drawable/divider_horizontal_textfield"/>

    </LinearLayout>
</ScrollView>