<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white">

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="80dip"
        android:orientation="horizontal">

        <TextView style="@style/LargeText"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:text="@string/setting_register_fee_text"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dip"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"/>

        <EditText style="@style/MiddleText"
            android:id="@+id/setting_register_fee_edit"
            android:layout_width="60dip"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            android:layout_gravity="center_vertical"
            android:inputType="number"
            android:gravity="left|center_vertical"/>

        <TextView style="@style/LargeText"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/recipe_fee_unit"
            android:gravity="center_vertical"
            android:layout_marginRight="10dip"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <View android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/gray"/>

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="80dip"
        android:orientation="horizontal">

        <TextView style="@style/LargeText"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:text="@string/setting_bag_price_text"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dip"
            android:layout_weight="1"/>

        <EditText style="@style/MiddleText"
            android:id="@+id/setting_bag_price_edit"
            android:layout_width="60dip"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            android:layout_gravity="center_vertical"
            android:inputType="numberDecimal"
            android:gravity="left|center_vertical"/>

        <TextView style="@style/LargeText"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/recipe_fee_unit"
            android:gravity="center_vertical"
            android:layout_marginRight="10dip"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <View android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/gray"/>

</LinearLayout>
