<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dip">

            <TextView style="@style/MiddleText"
                android:id="@+id/case_history_symptom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dip"
                android:text="@string/case_history_symptom"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"/>

            <EditText style="@style/MiddleText"
                android:id="@+id/case_history_symptom_edit"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>

        <EditText style="@style/MiddleText"
            android:id="@+id/case_history_description_edit"
            android:layout_width="fill_parent"
            android:layout_height="300dip"
            android:layout_weight="1"
            android:hint="@string/case_history_description_hint"
            android:gravity="top|left"/>

        <View android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@android:drawable/divider_horizontal_textfield"/>

        <LinearLayout android:id="@+id/recipe_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout android:layout_width="fill_parent"
                android:layout_height="?android:attr/listPreferredItemHeight"
                android:orientation="horizontal">

                <TextView style="@style/SmallText"
                    android:layout_width="0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dip"
                    android:singleLine="true"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:text="@string/case_history_recipe"/>

                <View android:layout_width="1dip"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="2dip"
                    android:layout_marginBottom="2dip"
                    android:background="@android:drawable/divider_horizontal_textfield"/>

                <ImageView android:id="@+id/case_history_recipe_add"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dip"
                    android:src="@drawable/ic_input_add"
                    android:onClick="onAddRecipeClick"/>

            </LinearLayout>
        </LinearLayout>

        <View android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@android:drawable/divider_horizontal_textfield"/>

    </LinearLayout>
</ScrollView>